// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SourceCodeManagerForm Should render SourceCodeManagerForm for existing User with bitBucket SCM 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-xxxlarge"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey900 StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
      >
        userProfile.addSCM
      </p>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main"
                style="width: 400px;"
              >
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sourceCodeManagerForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="scmTwo"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
              >
                userProfile.selectedSCM
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
              >
                <div
                  class="cardRow"
                >
                  <div
                    class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--selected Card--interactive"
                    data-index="0"
                    tabindex="0"
                  >
                    <span
                      class="Card--corner"
                    >
                      <span
                        class="Card--badge"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                        data-icon="main-tick"
                      >
                        <svg
                          height="10"
                          viewBox="0 0 11 8"
                          width="10"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <div
                      class="Card--cardIcon"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="bitbucket-blue"
                      >
                        <svg
                          fill="none"
                          height="25"
                          width="25"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M.78 0a.764.764 0 00-.77.89L3.27 20.7c.08.5.52.87 1.02.87h15.66c.38 0 .71-.27.77-.65L23.99.9a.768.768 0 00-.64-.88c-.05-.01-.09-.01-.13-.01zm13.74 14.32h-5L8.17 7.25h7.56z"
                            fill="#0357d1"
                          />
                        </svg>
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-align-center StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--color StyledProps--color-black"
                      >
                        common.repo_provider.bitbucketLabel
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
              style="width: 400px;"
            >
              <div
                class="Layout--horizontal StyledProps--main authHeaderRow StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium StyledProps--color StyledProps--color-black100"
                >
                  authentication
                </span>
                <div
                  class="bp3-form-group authTypeSelect"
                  data-id="authType-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="authType"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="usernamePassword"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <div
                      class="label"
                    >
                      <span
                        class="align bp3-label stringWithTooltipLabel"
                        data-tooltip-id="sourceCodeManagerForm_username"
                      >
                        username
                      </span>
                      <div
                        class="bp3-form-group"
                        data-id="undefined-3"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper DropDown--main"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--minWidth StyledProps--flex"
                                  data-testid="dropdown-button"
                                  style="min-width: unset;"
                                >
                                  <div
                                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                                      data-testid="dropdown-value"
                                      style="--text-line-clamp: 1;"
                                    >
                                      plaintext
                                    </p>
                                  </div>
                                  <div
                                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                                  >
                                    <span
                                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                                      data-icon="main-chevron-down"
                                    >
                                      <svg
                                        height="8"
                                        viewBox="0 0 14 8"
                                        width="8"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                                          fill="#4d5969"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group textCss"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="usernametextField"
                            type="text"
                            value="dev"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-5"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="sourceCodeManagerForm_password"
                      >
                        password
                      </span>
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="password"
                        href="/account/dummy/user/profile"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            secrets.secret.configureSecret
                          </div>
                          <div>
                            &lt;dummySecret&gt;
                          </div>
                        </p>
                      </a>
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main containerEditBtn Button--with-current-color Button--without-shadow"
                        data-testid="password-edit"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <span
                            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--color StyledProps--color-primary7"
                            icon="edit"
                          >
                            <svg
                              data-icon="edit"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                edit
                              </desc>
                              <path
                                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-huge"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  update
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test SourceCodeManagerForm Should render SourceCodeManagerForm for new User with default state 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main StyledProps--padding-xxxlarge"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey900 StyledProps--font-size-medium StyledProps--font-weight-semi-bold"
      >
        userProfile.addSCM
      </p>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          action="#"
          class="FormikForm--main"
        >
          <div>
            <div
              class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main"
                style="width: 400px;"
              >
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="sourceCodeManagerForm_name"
                    >
                      name
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
              >
                userProfile.selectedSCM
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
              >
                <div
                  class="cardRow"
                >
                  <div
                    class="bp3-card bp3-interactive bp3-elevation-0 Card--card card Card--selected Card--interactive"
                    data-index="0"
                    tabindex="0"
                  >
                    <span
                      class="Card--corner"
                    >
                      <span
                        class="Card--badge"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                        data-icon="main-tick"
                      >
                        <svg
                          height="10"
                          viewBox="0 0 11 8"
                          width="10"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <div
                      class="Card--cardIcon"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="github"
                      >
                        <svg
                          height="25"
                          viewBox="0 0 24 24"
                          width="25"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
                          />
                        </svg>
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-align-center StyledProps--flex StyledProps--flex-justifyContent-center StyledProps--color StyledProps--color-black"
                      >
                        common.repo_provider.githubLabel
                      </p>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-link"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    change
                  </span>
                </button>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main StyledProps--padding-top-large"
              style="width: 400px;"
            >
              <div
                class="Layout--horizontal StyledProps--main authHeaderRow StyledProps--flex"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium StyledProps--color StyledProps--color-black100"
                >
                  authentication
                </span>
                <div
                  class="bp3-form-group authTypeSelect"
                  data-id="authType-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="authType"
                            placeholder="- Select -"
                            style="padding-right: 0px;"
                            type="text"
                            value="usernameToken"
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <div
                      class="label"
                    >
                      <span
                        class="align bp3-label stringWithTooltipLabel"
                        data-tooltip-id="sourceCodeManagerForm_username"
                      >
                        username
                      </span>
                      <div
                        class="bp3-form-group"
                        data-id="undefined-3"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper DropDown--main"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--minWidth StyledProps--flex"
                                  data-testid="dropdown-button"
                                  style="min-width: unset;"
                                >
                                  <div
                                    class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                                  >
                                    <p
                                      class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                                      data-testid="dropdown-value"
                                      style="--text-line-clamp: 1;"
                                    >
                                      plaintext
                                    </p>
                                  </div>
                                  <div
                                    class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                                  >
                                    <span
                                      class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                                      data-icon="main-chevron-down"
                                    >
                                      <svg
                                        height="8"
                                        viewBox="0 0 14 8"
                                        width="8"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                                          fill="#4d5969"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="bp3-form-group textCss"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="usernametextField"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="null-5"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="bp3-label"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="sourceCodeManagerForm_accessToken"
                      >
                        personalAccessToken
                      </span>
                    </label>
                    <div
                      class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                    >
                      <a
                        class="containerLink"
                        data-testid="accessToken"
                        href="/account/dummy/user/profile"
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="key-main"
                          style="height: 12px;"
                        >
                          <svg
                            height="24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              stroke="#1C1C28"
                              stroke-width="0.5"
                            >
                              <path
                                d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                              />
                              <path
                                d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                              />
                            </g>
                          </svg>
                        </span>
                        <p
                          class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                        >
                          <div>
                            secrets.createSecret
                          </div>
                        </p>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-huge"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  add
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
